@@ -50,6 +50,8 @@ namespace dolfin {
     /// Friends
     friend class BoundaryInit;
     friend class NodeIterator::BoundaryNodeIterator;
+    friend class EdgeIterator::BoundaryEdgeIterator;
+    friend class FaceIterator::BoundaryFaceIterator;
 
   private:
 
